--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="./PersonalProject/KAAMELOTT/index.html"><span class="projectTitle">Kaamelott</span></a>
+                <a href="#"><span class="projectTitle">Kaamelott</span></a>
                 <br>
                 <a href="#"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
