--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="circle"></div>
                 <a href="./PersonalProject/TIC-TAC-TOE/index.html"><span class="projectTitle">Tic-Tac-Toe</span></a>
                 <br>
-                <a href="#"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
+                <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
               </div>
               <br>
