--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="circle"></div>
                 <a href="https://yannguiot.000webhostapp.com/Demineur/index.html"><span class="projectTitle">Deminer</span></a>
                 <br>
-                <a href="#"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
+                <a href="https://github.com/YannGUIOT/DEMINEUR"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
               </div>
               <br>
