--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="https://yannguiot.000webhostapp.com/Demineur/index.html"><span class="projectTitle">Deminer</span></a>
+                <a href="./PersonalProject/MINESWEEPER/index.html"><span class="projectTitle">MinesWeeper</span></a>
                 <br>
-                <a href="https://github.com/YannGUIOT/DEMINEUR"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
+                <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/MINESWEEPER"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
               </div>
               <br>
@@ -97,7 +97,7 @@
                 <div class="circle"></div>
                 <a href="./PersonalProject/KAAMELOTT/index.html"><span class="projectTitle">Kaamelott</span></a>
                 <br>
-                <a href="#"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
+                <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/KAAMELOTT"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
               </div>
               <br>
