--- a/index.html
+++ b/index.html
@@ -87,20 +87,14 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="./PersonalProject/MINESWEEPER/index.html"><span class="projectTitle">MinesWeeper</span></a>
+                <a href="https://yannguiot.000webhostapp.com/Demineur/index.html"><span class="projectTitle">MinesWeeper</span></a>
                 <br>
-                <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/MINESWEEPER"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
+                <a href="#"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
               </div>
               <br>
-              <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="./PersonalProject/KAAMELOTT/index.html"><span class="projectTitle">Kaamelott</span></a>
-                <br>
-                <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/KAAMELOTT"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
-                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
-              </div>
-              <br>
+
+
             </div>
             <br>
           </div>
