--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="https://classic-racing-school.fly.dev/"><span class="projectTitle">Classic Racing School</span></a>
+                <a href="https://classic-racing-school.fly.dev/" target="_blank"><span class="projectTitle">Classic Racing School</span></a>
                 <br>
-                <a href="https://github.com/DylanDor/Classic_Racing_School"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
+                <a href="https://github.com/DylanDor/Classic_Racing_School" target="_blank"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round RUBY"></div>Ruby On Rails </span></a>
               </div>
               <br>
@@ -79,15 +79,15 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="./PersonalProject/TIC-TAC-TOE/index.html"><span class="projectTitle">Tic-Tac-Toe</span></a>
+                <a href="./PersonalProject/TIC-TAC-TOE/index.html" target="_blank"><span class="projectTitle">Tic-Tac-Toe</span></a>
                 <br>
-                <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
+                <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE" target="_blank"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
               </div>
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="https://yannguiot.000webhostapp.com/Demineur/index.html"><span class="projectTitle">MinesWeeper</span></a>
+                <a href="https://yannguiot.000webhostapp.com/Demineur/index.html" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
                 <br>
                 <a href="#"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
