--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="circle"></div>
                 <a href="https://classic-racing-school.fly.dev/" target="_blank"><span class="projectTitle">Classic Racing School</span></a>
                 <br>
-                <a href="https://github.com/DylanDor/Classic_Racing_School" target="_blank"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
+                <span class="languages">
                   <div class="round RUBY"></div>Ruby On Rails </span></a>
               </div>
               <br>
@@ -81,16 +81,17 @@
                 <div class="circle"></div>
                 <a href="./PersonalProject/TIC-TAC-TOE/index.html" target="_blank"><span class="projectTitle">Tic-Tac-Toe</span></a>
                 <br>
-                <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE" target="_blank"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
-                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
+                <span class="languages">
+                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
+                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img src="assets/img/mini-folder-icon.png" alt="folder" height="14px"></a></span>
               </div>
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
                 <a href="https://yannguiot.000webhostapp.com/Demineur/index.html" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
                 <br>
-                <a href="#"><span class="languages"><img src="assets/img/mini-folder-icon.png" alt="folder">
-                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span></a>
+                <span class="languages">
+                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
               </div>
               <br>
 
