--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <br><br><br>
         <div class="contact">
           <p><u>Contact</u> :</p>
-          <p>guiot_yann@hotmail.fr</p>
+          <p><a href="mailto:guiot_yann@hotmail.fr">guiot_yann@hotmail.fr</a></p>
           <p>+33632930717</p>
         </div>
       </div>
