--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
   <header>
     <!--  navbar  -->
     <nav>
-      <ul>
-        <li><a href="https://github.com/YannGUIOT"><img src="assets/img/github_32x32.png" alt="github"></a></li>
-        <li><span>Fullstack Web Developer</span></li>
-      </ul>
+      <div>
+        <ul>
+          <li><a href="https://github.com/YannGUIOT"><img src="assets/img/github_32x32.png" alt="github"></a></li>
+          <li><span>Yann GUIOT</span></li>
+          <li><span>-</span></li>
+          <li><span>Fullstack&nbsp; Web&nbsp; Developer</span></li>
+        </ul>
+      </div>
+      <div class="slide-mode">
+        <p id="dark">Dark&nbsp;</p>
+        <img id="slide" src="../src/assets/img/mode-1.png" alt="slide" height="32px"/>
+        <p id="light">&nbsp;Light</p>
+      </div>
     </nav>
-
   </header>
 
   <main>
@@ -37,7 +45,7 @@
         <div class="links">
           <a href="https://github.com/YannGUIOT">
             <div class="link">
-              <img src="assets/img/github_32x32.png" alt="github">
+              <img id="github-logo" src="assets/img/github_32x32.png" alt="github">
               <p>GitHub</p>
             </div>
           </a>
@@ -57,7 +65,7 @@
       </div>
 
       <div class="welcome">
-        <div class="welcomBan"><img src="assets/img/dark-welcome-ban.png" alt="welcome"></div>
+        <div class="welcomBan"><img id="ban-img" src="../src/assets/img/welcome-ban-1.jpg" alt="welcome"/></div>
         <div class="projects">
           <div class="project">
             <div class="title">&nbsp;&nbsp; THP - FORMATION - FULLSTACK - FINAL GROUP PROJECT</div>
@@ -83,7 +91,7 @@
                 <br>
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img src="assets/img/mini-folder-icon.png" alt="folder" height="14px"></a></span>
+                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo" src="assets/img/mini-folder-icon.png" alt="folder" height="14px"></a></span>
               </div>
               <br>
               <div class="descriptionLink">
