--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="slide-mode">
         <p id="dark">Dark&nbsp;</p>
-        <img id="slide" src="../src/assets/img/mode-1.png" alt="slide" height="32px"/>
+        <img id="slide" src="assets/img/mode-1.png" alt="slide" height="32px"/>
         <p id="light">&nbsp;Light</p>
       </div>
     </nav>
@@ -65,7 +65,7 @@
       </div>
 
       <div class="welcome">
-        <div class="welcomBan"><img id="ban-img" src="../src/assets/img/welcome-ban-1.jpg" alt="welcome"/></div>
+        <div class="welcomBan"><img id="ban-img" src="assets/img/welcome-ban-1.jpg" alt="welcome"/></div>
         <div class="projects">
           <div class="project">
             <div class="title">&nbsp;&nbsp; THP - FORMATION - FULLSTACK - FINAL GROUP PROJECT</div>
