--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <div>
         <ul>
-          <li><a href="https://github.com/YannGUIOT"><img src="assets/img/github_32x32.png" alt="github"></a></li>
+          <li><a href="https://github.com/YannGUIOT"><img src="./assets/img/github_32x32.png" alt="github"></a></li>
           <li><span>Yann GUIOT</span></li>
           <li><span>-</span></li>
           <li><span>Fullstack&nbsp; Web&nbsp; Developer</span></li>
@@ -24,7 +24,7 @@
       </div>
       <div class="slide-mode">
         <p id="dark">Dark&nbsp;</p>
-        <img id="slide" src="assets/img/mode-1.png" alt="slide" height="32px"/>
+        <img id="slide" src="./assets/img/mode-1.png" alt="slide" height="32px"/>
         <p id="light">&nbsp;Light</p>
       </div>
     </nav>
@@ -37,7 +37,7 @@
     <div class="images">
       <div class="profil">
         <div class="photoProfil">
-          <img id="photo" src="assets/img/profil.jpg" alt="profil" width="150%" height="100%">
+          <img id="photo" src="./assets/img/profil.jpg" alt="profil" width="150%" height="100%">
         </div>
         <div class="name">
           <p>Yann GUIOT</p>
@@ -45,13 +45,13 @@
         <div class="links">
           <a href="https://github.com/YannGUIOT">
             <div class="link">
-              <img id="github-logo" src="assets/img/github_32x32.png" alt="github">
+              <img id="github-logo" src="./assets/img/github_32x32.png" alt="github">
               <p>GitHub</p>
             </div>
           </a>
           <a href="https://www.linkedin.com/in/yann-guiot/">
             <div class="link">
-              <img src="assets/img/linkedIn_32x32.png" alt="linkedin">
+              <img src="./assets/img/linkedIn_32x32.png" alt="linkedin">
               <p>LinkedIn</p>
             </div>
           </a>
@@ -65,7 +65,7 @@
       </div>
 
       <div class="welcome">
-        <div class="welcomBan"><img id="ban-img" src="assets/img/welcome-ban-1.jpg" alt="welcome"/></div>
+        <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-ban-1.jpg" alt="welcome"/></div>
         <div class="projects">
           <div class="project">
             <div class="title">&nbsp;&nbsp; THP - FORMATION - FULLSTACK - FINAL GROUP PROJECT</div>
@@ -91,7 +91,7 @@
                 <br>
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo" src="assets/img/mini-folder-icon.png" alt="folder" height="14px"></a></span>
+                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo" src="./assets/img/mini-folder-icon.png" alt="folder" height="14px"></a></span>
               </div>
               <br>
               <div class="descriptionLink">
@@ -102,7 +102,6 @@
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
               </div>
               <br>
-
 
             </div>
             <br>
