--- a/index.html
+++ b/index.html
@@ -58,9 +58,16 @@
         </div>
         <br><br><br>
         <div class="contact">
-          <p><u>Contact</u> :</p>
-          <p><a href="mailto:guiot_yann@hotmail.fr">guiot_yann@hotmail.fr</a></p>
-          <p>+33632930717</p>
+          <div class="links">
+            <div class="link">
+              <a href="mailto:guiot_yann@hotmail.fr"><img id="mail-icon" src="./assets/img/mail-icon.png" height="21px" alt="mail"/>
+                <p><span class="mail hidden-text">guiot_yann@hotmail.fr</span></a></p>
+            </div>
+            <div class="link">
+              <img id="tel-icon" src="./assets/img/smartphone-icon-1.png" height="54px" alt="tel"/>
+              <p><span class="tel hidden-text">+33 6 32 93 07 17</span></p>
+            </div>
+          </div>
         </div>
       </div>
 
