--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                 <a href="https://classic-racing-school.fly.dev/" id="link-racing" target="_blank"><span class="projectTitle">Classic Racing School</span></a>
                 <br>
                 <span class="languages">
-                  <div class="round RUBY"></div>Ruby On Rails </span></a>
+                  <div class="round RUBY"></div>Ruby On Rails &nbsp;&nbsp;
+                  <a href="https://github.com/DylanDor/Classic_Racing_School" target="_blank"><img id="folder-logo1" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a> </span></a>
               </div>
               <br>
             </div>
@@ -100,7 +101,7 @@
                 <br>
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a></span>
+                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo2" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a></span>
               </div>
               <br>
               <div class="descriptionLink">
