--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
               </div>
               <br>
+              <div class="descriptionLink">
+                <div class="circle"></div>
+                <a href="https://kaa-game.vercel.app/" id="link-kaagame" target="_blank"><span class="projectTitle">Kaamelott Game</span></a>
+                <br>
+                <span class="languages">
+                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
+              </div>
+              <br>
             </div>
             <br>
           </div>
