--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="https://yannguiot.000webhostapp.com/Demineur/index.html" id="link-minesweeper" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
+                <a href="https://mines-weeper-psi.vercel.app/" id="link-minesweeper" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
                 <br>
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
