--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
 
       <div class="welcome">
         <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-1.jpg" alt="welcome"/></div>
-        <div class="status"><div class="round ONLINE"></div>&nbsp;currently studying with the THP Bootcamp,
-        i'm looking for an&nbsp;<u>internship from April 3 to May 28, 2023</u></p></div>
+        <div class="status"><div class="round ONLINE"></div>&nbsp;currently on internship in a company until May 28, 2023</div>
         <div class="projects">
           <div class="project">
-            <div class="title">&nbsp;&nbsp; THP - FORMATION - FULLSTACK - FINAL GROUP PROJECT</div>
+            <div class="title">&nbsp;&nbsp; THP - FORMATION FULLSTACK - FINAL GROUP PROJECTS</div>
             <div class="description">
               <br>
               <div class="descriptionLink">
@@ -87,6 +86,15 @@
                 <span class="languages">
                   <div class="round RUBY"></div>Ruby On Rails &nbsp;&nbsp;
                   <a href="https://github.com/DylanDor/Classic_Racing_School" target="_blank"><img id="folder-logo1" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a> </span></a>
+              </div>
+              <br>
+              <div class="descriptionLink">
+                <div class="circle"></div>
+                <a href="https://the-packing-hroject-8rmg.vercel.app/" id="link-tph" target="_blank"><span class="projectTitle">The Packing Hroject</span></a>
+                <br>
+                <span class="languages">
+                  <div class="round REACT"></div>React JS &nbsp;&nbsp;
+                  <a href="https://github.com/DevGiack/The-Packing-Hroject" target="_blank"><img id="folder-logo2" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a> </span></a>
               </div>
               <br>
             </div>
@@ -101,7 +109,7 @@
                 <br>
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo2" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a></span>
+                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a></span>
               </div>
               <br>
               <div class="descriptionLink">
