--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
               <div class="descriptionLink">
                 <div class="circle"></div>
                 <a href="https://the-packing-hroject-8rmg.vercel.app/" id="link-tph" target="_blank"><span class="projectTitle">The Packing Hroject</span></a>
+                <!-- <a href="ipfs://bafybeidxnma2eaqa5di5pl7c7rtctm5gyltiy4hluztiomdsfjxngr44cu/" id="link-tph" target="_blank"><span class="web3">(ipfs)</span></a> -->
                 <br>
                 <span class="languages">
                   <div class="round REACT"></div>React JS &nbsp;&nbsp;
@@ -114,7 +115,7 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="https://mines-weeper-psi.vercel.app/" id="link-minesweeper" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
+                <a href="https://minesweeper-ten-brown.vercel.app/" id="link-minesweeper" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
                 <br>
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
