--- a/PersonalProject/TIC-TAC-TOE/index.html
+++ b/PersonalProject/TIC-TAC-TOE/index.html
@@ -42,7 +42,11 @@
 			<p><span id="Player1Score"></span></p>
 			<p><span id="Player2Score"></span></p>
 		</div>
+		<p class="copyright">DEVELOPPED BY :<br>YANN GUIOT - FULLSTACK WEB DEVELOPER</p>
 	</div>
+	<footer>
+
+	</footer>
 </body>
 
 </html>
