--- a/PersonalProject/TIC-TAC-TOE/index.html
+++ b/PersonalProject/TIC-TAC-TOE/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="script.js" defer></script>
 	<title> OX - MORPION - XO </title>
+	<link rel="icon" type="image/x-icon" href="assets/img/Morpion-Favicon.png">
 </head>
 <body>
 	<div class="content">
