--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <div>
         <ul>
-          <li><a href="https://github.com/YannGUIOT"><img src="./assets/img/icons/github.png" alt="github"></a></li>
+          <li><a href="https://github.com/YannGUIOT"><img src="./assets/img/icons/github.png" alt="github" width="auto" height="auto"></a></li>
           <li><span>Yann GUIOT</span></li>
           <li><span>-</span></li>
           <li><span>Fullstack&nbsp; Web&nbsp; Developer</span></li>
@@ -25,7 +25,7 @@
       </div>
       <div class="slide-mode">
         <p id="dark">Dark&nbsp;</p>
-        <img id="slide" src="./assets/img/icons/mode-1.png" alt="slide" height="32px"/>
+        <img id="slide" src="./assets/img/icons/mode-1.png" alt="slide" width="auto" height="32px"/>
         <p id="light">&nbsp;Light</p>
       </div>
     </nav>
@@ -46,13 +46,13 @@
         <div class="links">
           <a href="https://github.com/YannGUIOT">
             <div class="link">
-              <img id="github-logo" src="./assets/img/icons/github.png" alt="github">
+              <img id="github-logo" src="./assets/img/icons/github.png" alt="github" width="auto" height="auto">
               <p>GitHub</p>
             </div>
           </a>
           <a href="https://www.linkedin.com/in/yann-guiot/">
             <div class="link">
-              <img src="./assets/img/icons/linkedIn.png" alt="linkedin">
+              <img src="./assets/img/icons/linkedIn.png" alt="linkedin" width="auto" height="auto">
               <p>LinkedIn</p>
             </div>
           </a>
@@ -61,11 +61,11 @@
         <div class="contact">
           <div class="links">
             <div class="link">
-              <a href="mailto:guiot_yann@hotmail.fr"><img id="mail-icon" src="./assets/img/icons/mail.png" height="21px" alt="mail"/>
+              <a href="mailto:guiot_yann@hotmail.fr"><img id="mail-icon" src="./assets/img/icons/mail.png" width="auto" height="21px" alt="mail"/>
                 <p><span class="mail hidden-text">guiot_yann@hotmail.fr</span></a></p>
             </div>
             <div class="link">
-              <img id="tel-icon" src="./assets/img/icons/smartphone-1.png" height="54px" alt="tel"/>
+              <img id="tel-icon" src="./assets/img/icons/smartphone-1.png" width="auto" height="54px" alt="tel"/>
               <p><span class="tel hidden-text">+33 6 32 93 07 17</span></p>
             </div>
           </div>
@@ -73,7 +73,7 @@
       </div>
 
       <div class="welcome">
-        <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-1.jpg" alt="welcome"/></div>
+        <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-1.jpg" alt="welcome" width="auto" height="auto"/></div>
         <div class="status"><div class="round ONLINE"></div>&nbsp;currently on internship in a company until May 28, 2023</div>
         <div class="projects">
           <div class="project">
@@ -86,7 +86,7 @@
                 <br>
                 <span class="languages">
                   <div class="round RUBY"></div>Ruby On Rails &nbsp;&nbsp;
-                  <a href="https://github.com/DylanDor/Classic_Racing_School" target="_blank"><img id="folder-logo1" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a> </span></a>
+                  <a href="https://github.com/DylanDor/Classic_Racing_School" target="_blank"><img id="folder-logo1" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a> </span></a>
               </div>
               <br>
               <div class="descriptionLink">
@@ -96,7 +96,7 @@
                 <br>
                 <span class="languages">
                   <div class="round REACT"></div>React JS &nbsp;&nbsp;
-                  <a href="https://github.com/DevGiack/The-Packing-Hroject" target="_blank"><img id="folder-logo2" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a> </span></a>
+                  <a href="https://github.com/DevGiack/The-Packing-Hroject" target="_blank"><img id="folder-logo2" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a> </span></a>
               </div>
               <br>
             </div>
@@ -111,7 +111,7 @@
                 <br>
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" height="14px"></a></span>
+                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
               </div>
               <br>
               <div class="descriptionLink">
@@ -135,16 +135,13 @@
           </div>
         </div>
         <div id="preview">
-          <img id="preview-img" src="" alt="preview"/>
+          <img id="preview-img" src="" alt="preview" width="auto" height="auto"/>
           <p id="preview-text"></p>
         </div>
       </div>
     </div>
   </main>
 
-  <footer>
-    <!--  footer  -->
-  </footer>
 </body>
 
 </html>
