--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title> Yann GUIOT </title>
   <link rel="icon" type="image/x-icon" href="assets/img/PortFolio-Favicon.png">
   <meta charset="utf-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-  <meta name="portfolio" content="my projects">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <script src="script.js" defer></script>
