--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/x-icon" href="assets/img/PortFolio-Favicon.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Portfolio aiming to show my abilities and skills in the field of web development">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <script src="script.js" defer></script>
