--- a/PersonalProject/TIC-TAC-TOE/index.html
+++ b/PersonalProject/TIC-TAC-TOE/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="TIC-TAC-TOE personal game developed for my learning of Javascript code">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="script.js" defer></script>
 	<title> OX - MORPION - XO </title>
