--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="./PersonalProject/TIC-TAC-TOE/index.html" id="link-morpion" target="_blank"><span class="projectTitle">Tic-Tac-Toe</span></a>
+                <a href="https://tic-tac-toe-roan-xi.vercel.app/" id="link-morpion" target="_blank"><span class="projectTitle">Tic-Tac-Toe</span></a>
                 <br>
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/YannGUIOT.github.io/tree/master/PersonalProject/TIC-TAC-TOE/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                  <a href="https://github.com/YannGUIOT/TIC-TAC-TOE/blob/master/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
               </div>
               <br>
               <div class="descriptionLink">
