--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
           <div class="links">
             <div class="link">
               <a href="mailto:guiot_yann@hotmail.fr"><img id="mail-icon" src="./assets/img/icons/mail.png" width="auto" height="21px" alt="mail"/>
-                <p><span class="mail hidden-text">guiot_yann@hotmail.fr</span></a></p>
+                <p class="mail">guiot_yann@hotmail.fr</a></p>
             </div>
             <div class="link">
               <img id="tel-icon" src="./assets/img/icons/smartphone-1.png" width="auto" height="54px" alt="tel"/>
-              <p><span class="tel hidden-text">+33 6 32 93 07 17</span></p>
+              <p>+33 6 32 93 07 17</p>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
 
       <div class="welcome">
         <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-1.jpg" alt="welcome" width="auto" height="auto"/></div>
-        <div class="status"><div class="round ONLINE"></div>&nbsp;currently on internship in a company until May 28, 2023</div>
+        <div class="status"><div class="round ONLINE"></div><i>&nbsp;open to work</i></div>
         <div class="projects">
           <div class="project">
             <div class="title">&nbsp;&nbsp; THP - FORMATION FULLSTACK - FINAL GROUP PROJECTS</div>
