--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="contact">
           <div class="links">
             <div class="link">
-              <a href="mailto:guiot_yann@hotmail.fr"><img id="mail-icon" src="./assets/img/icons/mail.png" width="auto" height="21px" alt="mail"/>
-                <p class="mail">guiot_yann@hotmail.fr</a></p>
+              <a href="mailto:guiot_yann@protonmail.com"><img id="mail-icon" src="./assets/img/icons/mail.png" width="auto" height="21px" alt="mail"/>
+                <p class="mail">guiot_yann@protonmail.com</a></p>
             </div>
             <div class="link">
               <img id="tel-icon" src="./assets/img/icons/smartphone-1.png" width="auto" height="54px" alt="tel"/>
