--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
               </div>
               <br>
+              <div class="descriptionLink">
+                <div class="circle"></div>
+                <a href="https://boiler-shop-react.vercel.app/" id="link-boutique" target="_blank"><span class="projectTitle">Boutique en Ligne</span></a>
+                <br>
+                <span class="languages">
+                  <div class="round REACT"></div>React JS &nbsp;&nbsp;
+              </div>
+              <br>
             </div>
             <br>
           </div>
