--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <br>
               <div class="descriptionLink">
                 <div class="circle"></div>
-                <a href="https://boiler-shop-react.vercel.app/" id="link-boutique" target="_blank"><span class="projectTitle">Boutique en Ligne</span></a>
+                <a href="https://boiler-shop-react.vercel.app/" id="link-boutique" target="_blank"><span class="projectTitle">Online Store Example</span></a>
                 <br>
                 <span class="languages">
                   <div class="round REACT"></div>React JS &nbsp;&nbsp;
