--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <div>
         <ul>
-          <li><a href="https://github.com/YannGUIOT"><img src="./assets/img/icons/github.png" alt="github" width="auto" height="auto"></a></li>
+          <li><a href="https://github.com/YannGUIOT" target="_blank"><img src="./assets/img/icons/github.png" alt="github" width="auto" height="auto"></a></li>
           <li><span>Yann GUIOT</span></li>
           <li><span>-</span></li>
           <li><span>Fullstack&nbsp; Web&nbsp; Developer</span></li>
@@ -44,13 +44,13 @@
           <p>Yann GUIOT</p>
         </div>
         <div class="links">
-          <a href="https://github.com/YannGUIOT">
+          <a href="https://github.com/YannGUIOT" target="_blank">
             <div class="link">
               <img id="github-logo" src="./assets/img/icons/github.png" alt="github" width="auto" height="auto">
               <p>GitHub</p>
             </div>
           </a>
-          <a href="https://www.linkedin.com/in/yann-guiot/">
+          <a href="https://www.linkedin.com/in/yann-guiot/" target="_blank">
             <div class="link">
               <img src="./assets/img/icons/linkedIn.png" alt="linkedin" width="auto" height="auto">
               <p>LinkedIn</p>
@@ -61,7 +61,7 @@
         <div class="contact">
           <div class="links">
             <div class="link">
-              <a href="mailto:guiot_yann@protonmail.com"><img id="mail-icon" src="./assets/img/icons/mail.png" width="auto" height="21px" alt="mail"/>
+              <a href="mailto:guiot_yann@protonmail.com" target="_blank"><img id="mail-icon" src="./assets/img/icons/mail.png" width="auto" height="21px" alt="mail"/>
                 <p class="mail">guiot_yann@protonmail.com</a></p>
             </div>
             <div class="link">
@@ -133,6 +133,14 @@
               <div class="descriptionLink">
                 <div class="circle"></div>
                 <a href="https://boiler-shop-react.vercel.app/" id="link-boutique" target="_blank"><span class="projectTitle">Online Store Example</span></a>
+                <br>
+                <span class="languages">
+                  <div class="round REACT"></div>React JS &nbsp;&nbsp;
+              </div>
+              <br>
+              <div class="descriptionLink">
+                <div class="circle"></div>
+                <a href="https://velib-api-yannguiot.vercel.app/" id="link-velib" target="_blank"><span class="projectTitle">Velib API Example</span></a>
                 <br>
                 <span class="languages">
                   <div class="round REACT"></div>React JS &nbsp;&nbsp;
